--- a/public/admin.html
+++ b/public/admin.html
@@ -46,6 +46,13 @@
   h1{text-align:center;margin:2px 0 8px;font-size:24px;letter-spacing:.4px}
   p,small{color:var(--muted);text-align:center;margin:0}
 
+  .row{display:flex;gap:8px;margin:8px 0;flex-wrap:wrap}
+  input[type=text],input[type=number]{
+    flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
+    border-radius:12px;padding:10px 12px;color:#fff;outline:none;
+  }
+  input::placeholder{color:#9a8ccc}
+
   .btn{
     position:relative;border:none;border-radius:12px;padding:10px 12px;
     color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);
@@ -55,8 +62,10 @@
     height:36px;font-size:12.5px;
   }
   .btn:hover{filter:brightness(1.08)}
+  .btn > *{position:relative;z-index:2}
+  .btn::before{content:"";position:absolute;inset:0;border-radius:12px;z-index:1;background:transparent;}
   .btn--thin::before{
-    content:"";position:absolute;inset:-1px;border-radius:13px;
+    inset:-1px;border-radius:13px;
     background:conic-gradient(from 45deg,var(--neonA)0%,var(--neonB)18%,var(--neonA)36%,var(--neonA)100%);
     -webkit-mask:linear-gradient(#000 0 0) content-box,linear-gradient(#000 0 0);
     -webkit-mask-composite:xor;mask-composite:exclude;padding:1px;
@@ -70,16 +79,110 @@
     gap:8px;
     margin:8px 0 6px;
   }
-  .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
   #btnRot{ font-size:11.4px; }
 
+  .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
   .btn--main{
     position:relative;
     font-size:15px; padding:12px 16px; min-width:220px;
     background:#231a44;
     box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
   }
+  .btn--main::before{
+    content:""; position:absolute; inset:-2px; border-radius:14px; z-index:1;
+    background:conic-gradient(from 30deg, var(--neonA) 0%, var(--neonB) 14%, var(--neonA) 28%, var(--neonA) 100%);
+    -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
+    -webkit-mask-composite:xor; mask-composite:exclude;
+    padding:2px; filter:saturate(120%) blur(.35px) opacity(.95);
+  }
+  .btn--main::after{
+    content:""; position:absolute; z-index:0; inset:-16px; border-radius:28px;
+    background: radial-gradient(45% 70% at 50% 50%, rgba(127,92,255,.55), rgba(127,92,255,.22) 55%, transparent 75%);
+    filter:blur(16px);
+    animation:breath 2.8s ease-in-out infinite;
+  }
+  @keyframes breath{
+    0%,100%{ transform:scale(0.96); opacity:.85; }
+    50%    { transform:scale(1.06); opacity:1;   }
+  }
 
+  #list{margin-top:24px;}
+  .item{
+    display:grid;
+    grid-template-columns: var(--listColW) 1fr var(--listColW);
+    gap:8px; align-items:center; margin:6px 0;
+  }
+  .item input, .item .btn{ height:36px; }
+  .item .name{
+    width:var(--listColW);min-width:var(--listColW);max-width:var(--listColW);
+    background:#2b2250;border:1px solid rgba(180,140,255,.35);
+    border-radius:12px;padding:8px 10px;color:#fff;outline:none;font-size:12.5px;text-align:left;
+  }
+  .item .url{
+    width:100%;min-width:0;
+    background:#2b2250;border:1px solid rgba(180,140,255,.35);
+    border-radius:12px;padding:8px 12px;color:#fff;outline:none;font-size:13px;
+  }
+  .item .btn{
+    min-width:var(--listColW);max-width:var(--listColW);
+    display:flex;align-items:center;justify-content:center;font-size:12.5px;
+    padding:0 10px;
+  }
+
+  .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
+
+  .cfg-grid{
+    display:grid;
+    grid-template-columns:
+      minmax(80px, var(--cfgLabelW))
+      minmax(48px, var(--cfgNumberW))
+      minmax(48px, var(--cfgSuffixW))
+      minmax(0, 1fr)
+      minmax(120px, var(--saveBtnW));
+    align-items:center;
+    gap: var(--cfgGap);
+  }
+  .cfg-label,.cfg-suffix{
+    color:#d7ccff; white-space:nowrap; font-size:13px;
+  }
+  .cfg-label{ padding-left:8px; }
+
+  #blocksize{
+    width:100% !important;
+    flex:0 0 auto !important;
+    text-align:center;
+    padding:6px 4px; font-size:13px;
+  }
+  #token{
+    grid-column:1 / 4;
+    min-width:0;
+    width:100%;
+    padding:8px 10px;
+    background:#2b2250;border:1px solid rgba(180,140,255,.35);border-radius:12px;color:#fff;font-size:13px;outline:none;
+  }
+  .mini-inner .cfg-grid .btn{
+    width:100%;
+    min-width:0;
+    justify-content:center;
+  }
+
+  .stats-card{
+    margin:18px auto;
+    padding:14px;
+    display:flex;align-items:center;justify-content:center;gap:10px;
+    cursor:pointer;user-select:none;
+    background:linear-gradient(var(--card),var(--card)) padding-box,
+               linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
+    border:1px solid transparent;border-radius:20px;
+    box-shadow:0 12px 40px rgba(0,0,0,.45);
+  }
+  .stats-card:hover{filter:brightness(1.05);transform:translateY(-1px);transition:.18s}
+  .stats-icon{
+    width:20px;height:20px;border-radius:50%;
+    background:conic-gradient(from 0deg,#ffffff 0deg 110deg,#b985ff 110deg 360deg);
+  }
+
+  /* Overlay de estadísticas */
   #statsPanel{
     position:fixed;
     inset:0;
@@ -93,6 +196,8 @@
   #statsPanel .card-mini{
     max-width:420px;
     width:100%;
+    position:relative;
+    z-index:1000;
     background:radial-gradient(circle at 30% -20%, #2e1759, #120428 80%) padding-box,
                linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
     border-radius:22px;
@@ -100,31 +205,86 @@
     border:1px solid rgba(255,255,255,0.15);
     color:#efeaff;
   }
+  #statsPanel .mini-inner{
+    padding:18px 16px 16px;
+  }
 
+  /* 🔹 Ajuste definitivo de botones de estadísticas (alineados siempre en 1 línea) */
   .stats-filters {
     display:flex;
     justify-content:space-between;
+    align-items:stretch;
     gap:6px;
+    margin-top:4px;
     flex-wrap:nowrap;
   }
   .stats-filters .btn{
     flex:1;
+    min-width:0;
+    text-align:center;
     font-size:12px;
     height:34px;
     padding:0 4px;
+    letter-spacing:0.1px;
+    white-space:nowrap;
   }
   .stats-filters .btn.active{
     background:#3a2b66;
     box-shadow:0 0 12px rgba(127,92,255,.45);
     filter:brightness(1.1);
+    transition:.2s;
   }
+
+  /* Versión responsive: más compactos en celu */
   @media(max-width:480px){
+    .stats-filters{
+      gap:4px;
+    }
     .stats-filters .btn{
-      font-size:10px;
+      font-size:9.8px;
       height:30px;
       padding:0 2px;
+      letter-spacing:0;
     }
   }
+
+  @media(max-width:420px){
+    .logo{width:216px;margin:8px auto -38px}
+    .card-inner{padding:14px 10px}
+    .btn{font-size:12.5px}
+    :root{ --cfgLabelW:96px; --cfgNumberW:52px; --cfgSuffixW:50px; --saveBtnW:140px; --cfgGap:6px; --listColW:96px; }
+    .item{ grid-template-columns: var(--listColW) 1fr var(--listColW); gap:6px; }
+    .item .btn{ font-size:12px; padding:0 8px; min-width:var(--listColW); max-width:var(--listColW); }
+  }
+  @media(max-width:360px){
+    :root{ --listColW:88px; }
+    .item{ grid-template-columns: var(--listColW) 1fr var(--listColW); gap:6px; }
+    .item .name{ padding:8px 8px; font-size:12px; }
+    .item .url{ padding:8px 10px; font-size:12.5px; }
+    .item .btn{ font-size:11.5px; padding:0 6px; }
+  }
+
+  @media (min-width: 768px){
+  .cfg-grid{
+    grid-template-columns:
+      var(--cfgLabelW)
+      var(--cfgNumberW)
+      var(--cfgSuffixW)
+      minmax(0, 0.8fr)
+      var(--saveBtnW);
+    align-items:center;
+    gap:var(--cfgGap);
+  }
+  #token{
+    grid-column:1 / 4;
+    width:100%;
+    min-width:0;
+  }
+  .cfg-grid .btn{
+    min-width: var(--saveBtnW);
+    justify-content:center;
+  }
+}
 </style>
 </head>
 <body>
@@ -138,71 +298,249 @@
   <div class="card">
     <div class="card-inner">
       <h1>PANEL ADMIN</h1>
+
       <div class="actions-top">
         <button class="btn btn--thin btn--sm" id="btnView">Ver lista</button>
         <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
         <button class="btn btn--thin btn--sm" id="btnReset">Borrar lista</button>
       </div>
+
       <div class="actions-bottom">
         <button class="btn btn--main" id="btnAdd">AGREGAR CAJERA</button>
       </div>
+
       <div id="list"></div>
+
       <div class="save-wrap" id="saveWrap" style="display:none">
         <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
       </div>
+
       <p id="msg"></p>
     </div>
   </div>
 
   <div class="stats-card" id="btnStats">
-    <span>📊 Estadísticas</span>
+    <div class="stats-icon"></div>
+    <span>Estadísticas</span>
   </div>
 
   <div id="statsPanel">
     <div class="card-mini">
       <div class="mini-inner">
-        <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;font-weight:600;">Clientes nuevos</p>
-        <div class="stats-filters">
+        <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;font-weight:600;">
+          Clientes nuevos
+        </p>
+
+        <div class="actions-top stats-filters">
           <button class="btn btn--thin btn--sm active" data-range="today">Hoy</button>
           <button class="btn btn--thin btn--sm" data-range="yesterday">Ayer</button>
           <button class="btn btn--thin btn--sm" data-range="week">Semana actual</button>
           <button class="btn btn--thin btn--sm" data-range="month">Mes actual</button>
         </div>
+
         <div id="statsResults" style="margin-top:14px;font-size:13px;color:#e7e0ff;"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card-mini">
+    <div class="mini-inner">
+      <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
+
+      <div class="cfg-grid">
+        <label class="cfg-label">Rotar cada</label>
+        <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2">
+        <span class="cfg-suffix">clicks</span>
+        <div></div>
+        <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
+
+        <input id="token" type="text" placeholder="tok99-2025">
+        <div></div>
+        <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
       </div>
     </div>
   </div>
 </div>
 
 <script>
+const c=document.getElementById("bg"),x=c.getContext("2d");
+let P=[];
+function rs(){c.width=innerWidth;c.height=innerHeight}
+addEventListener("resize",rs);rs();
+for(let i=0;i<90;i++)P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.7});
+(function anim(){
+  const grad=x.createRadialGradient(c.width*0.3,c.height*0.1,0,c.width*0.3,c.height*0.1,Math.max(c.width,c.height));
+  const cs=p=>getComputedStyle(document.documentElement).getPropertyValue(p).trim();
+  grad.addColorStop(0,cs('--bg1'));grad.addColorStop(1,cs('--bg2'));
+  x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);x.fillStyle=cs('--particle');
+  for(const p of P){p.x+=p.vx;p.y+=p.vy;if(p.x<0||p.x>c.width)p.vx*=-1;if(p.y<0||p.y>c.height)p.vy*=-1;x.beginPath();x.arc(p.x,p.y,p.r,0,6.283);x.fill();}
+  requestAnimationFrame(anim);
+})();
+
 const $=s=>document.querySelector(s);
-const msg=$("#msg"),tokenInput=$("#token")||{value:""},list=$("#list"),saveWrap=$("#saveWrap");
-const statsPanel=$("#statsPanel"),statsResults=$("#statsResults");
+const list=$("#list"),msg=$("#msg"),tokenInput=$("#token"),bsInput=$("#blocksize"),saveWrap=$("#saveWrap");
+const statsPanel = $("#statsPanel");
+const statsResults = $("#statsResults");
 
-$("#btnStats").onclick=()=>{statsPanel.style.display='flex';loadStatsRange('today');};
-statsPanel.addEventListener("click",e=>{if(e.target===statsPanel)statsPanel.style.display='none';});
-
-document.querySelectorAll(".stats-filters .btn").forEach(btn=>{
-  btn.addEventListener("click",()=>{
-    document.querySelectorAll(".stats-filters .btn").forEach(b=>b.classList.remove("active"));
-    btn.classList.add("active");
-    loadStatsRange(btn.dataset.range);
-  });
-});
-
+function row(val={name:"",url:""}) {
+  if(typeof val==="string") val={name:"",url:val};
+  const d=document.createElement("div");d.className="item";
+  const iName=document.createElement("input");iName.type="text";iName.placeholder="Nombre";iName.className="name";iName.value=val.name||"";
+  const iUrl=document.createElement("input");iUrl.type="text";iUrl.placeholder="https://wa.me/...";iUrl.className="url";iUrl.value=val.url||"";
+  const b=document.createElement("button");b.className="btn btn--thin btn--sm";b.textContent="Borrar";b.onclick=()=>d.remove();
+  d.append(iName,iUrl,b);list.append(d);
+}
+function values(){
+  return [...list.querySelectorAll(".item")].map(el=>{
+    const name=el.querySelector(".name")?.value.trim()||"";
+    const url=el.querySelector(".url")?.value.trim()||"";
+    return url?{name,url}:null;
+  }).filter(Boolean);
+}
 function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
 
-async function loadStatsRange(range){
+$("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado")};
+
+window.onload=async()=>{
+  const t=localStorage.getItem("adm_tok");
+  if(t) tokenInput.value=t;
+  if(t){ await loadBlockSize(t); }
+};
+
+$("#btnView").onclick=async()=>{
   const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
   try{
-    statsResults.textContent="Cargando...";
-    const r=await fetch(`/api/stats-range?token=${encodeURIComponent(t)}&range=${range}`);
+    show("Cargando...");
+    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
     const j=await r.json();
-    if(!j.ok)return statsResults.textContent="Error al obtener datos";
-    if(!j.stats?.length)return statsResults.textContent="Sin datos para este período.";
-    statsResults.innerHTML=j.stats.map(s=>`<div style="display:flex;justify-content:space-between;margin:3px 0;"><span>${s.name||"Sin nombre"}</span><span style="font-weight:600">${s.count||0} clientes</span></div>`).join("");
-  }catch(e){statsResults.textContent="Error al obtener datos";}
+    list.innerHTML="";(j.links||[]).forEach(o=>row(o));
+    if((j.links||[]).length===0)row();
+    show("Lista cargada");
+    saveWrap.style.display='flex';
+  }catch(e){show("Error al cargar",0);}
+};
+
+$("#btnReset").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  try{
+    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
+    const j=await r.json();list.innerHTML="";row();
+    show(j.ok?"Lista borrada":"Error",j.ok);
+  }catch(e){show("Error",0);}
+};
+
+$("#btnRot").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  try{
+    const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
+    const j=await r.json();show(j.ok?"Rotación reiniciada":"Error",j.ok);
+  }catch(e){show("Error",0);}
+};
+
+$("#btnAdd").onclick = () => {
+  row();
+  saveWrap.style.display='flex';
+};
+
+$("#btnSaveFinal").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  const vals=values();if(!vals.length)return show("Nada que guardar",0);
+  try{
+    show("Guardando...");
+    const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
+      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)
+    });
+    const j=await r.json();show(j.ok?`Guardado (${j.saved})`:"Error al guardar",j.ok);
+  }catch(e){show("Error al guardar",0);}
+};
+
+async function loadBlockSize(t){
+  try{
+    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}&get=1`);
+    const j=await r.json();if(j.ok&&j.value!==undefined)bsInput.value=j.value;
+  }catch(e){}
 }
+
+$("#btnSaveBS").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  const v=Number(bsInput.value);
+  if(!Number.isInteger(v)||v<1||v>20)return show("Valor inválido (1 a 20)",0);
+  try{
+    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}`,{
+      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({value:v})
+    });
+    const j=await r.json();show(j.ok?`Block size guardado (${v})`:"Error al guardar",j.ok);
+  }catch(e){show("Error al guardar",0);}
+};
+
+/* ----------- ESTADÍSTICAS ----------- */
+async function loadStatsRange(range) {
+  const t = tokenInput.value.trim();
+  if (!t) {
+    show("Poné token", 0);
+    return;
+  }
+
+  try {
+    show("Cargando estadísticas...");
+    statsResults.textContent = "Cargando...";
+
+    const r = await fetch(`/api/stats-range?token=${encodeURIComponent(t)}&range=${encodeURIComponent(range)}`);
+    const j = await r.json();
+
+    if (!j.ok) {
+      statsResults.textContent = "";
+      return show("Error al obtener estadísticas", 0);
+    }
+
+    if (!j.stats || !j.stats.length) {
+      statsResults.textContent = "Sin datos para este período.";
+      return show("Sin datos todavía", 1);
+    }
+
+    const lineas = j.stats.map(s => {
+      const nombre = s.name || "Sin nombre";
+      const cant = s.count || 0;
+      return `<div style="display:flex;justify-content:space-between;gap:8px;margin:3px 0;">
+        <span>${nombre}</span>
+        <span style="font-weight:600">${cant} clics</span>
+      </div>`;
+    });
+
+    statsResults.innerHTML = lineas.join("");
+    show("Estadísticas cargadas", 1);
+  } catch (e) {
+    console.error(e);
+    statsResults.textContent = "";
+    show("Error al obtener estadísticas", 0);
+  }
+}
+
+$("#btnStats").onclick = () => {
+  statsPanel.style.display = 'flex';
+
+  const btns = document.querySelectorAll(".stats-filters .btn");
+  btns.forEach(b => b.classList.remove("active"));
+  const first = document.querySelector('.stats-filters .btn[data-range="today"]');
+  if (first) first.classList.add("active");
+
+  loadStatsRange("today");
+};
+
+statsPanel.addEventListener("click", (e) => {
+  if (e.target === statsPanel) {
+    statsPanel.style.display = 'none';
+  }
+});
+
+document.querySelectorAll(".stats-filters .btn").forEach(btn => {
+  btn.addEventListener("click", () => {
+    const range = btn.getAttribute("data-range");
+    document.querySelectorAll(".stats-filters .btn").forEach(b => b.classList.remove("active"));
+    btn.classList.add("active");
+    loadStatsRange(range);
+  });
+});
 </script>
 </body>
 </html>
