--- a/public/admin.html
+++ b/public/admin.html
@@ -503,7 +503,7 @@ async function loadStatsRange(range) {
       const cant = s.count || 0;
       return `<div style="display:flex;justify-content:space-between;gap:8px;margin:3px 0;">
         <span>${nombre}</span>
-        <span style="font-weight:600">${cant} clics</span>
+        <span style="font-weight:600">${cant} clicks</span>
       </div>`;
     });
 
